--- a/index.html
+++ b/index.html
@@ -186,51 +186,44 @@
   <div class="episodes-container" id="episodesSlider">
 
     <article class="episode-card">
-      <img src="https://i.ibb.co/pjRkwDzn/anime-uchiha-sasuke-uzumaki-naruto-road-to-ninja-naruto-the-movie-wallpaper-preview.jpg" alt="Naruto Road to Ninja">
-      <span class="episode-title">الحلقة 26</span>
+      <img src="https://i.ibb.co/pjRkwDzn/anime-uchiha-sasuke-uzumaki-naruto-road-to-ninja-naruto-the-movie-wallpaper-preview.jpg"
+           alt="Naruto Road to Ninja"
+           loading="lazy">
     </article>
 
     <article class="episode-card">
-  <img src="https://i.ibb.co/3YsrgWXY/b59198c92059644bbadb214f275a116d.jpg"
-       alt="حلقة أنمي"
-       loading="lazy">
-  <span class="episode-title">الحلقة 27</span>
-</article>
+      <img src="https://i.ibb.co/3YsrgWXY/b59198c92059644bbadb214f275a116d.jpg"
+           alt="حلقة أنمي"
+           loading="lazy">
+    </article>
 
     <article class="episode-card">
-  <img src="https://i.ibb.co/C5XHBV5v/dcgrcre-f4b144f8-2427-4543-b277-5f7f1d5b6381.jpg"
-       alt="حلقة أنمي"
-       loading="lazy">
-  <span class="episode-title">الحلقة 28</span>
-</article>
-
+      <img src="https://i.ibb.co/C5XHBV5v/dcgrcre-f4b144f8-2427-4543-b277-5f7f1d5b6381.jpg"
+           alt="حلقة أنمي"
+           loading="lazy">
+    </article>
 
     <article class="episode-card">
-  <img src="https://i.ibb.co/nsB6vqVM/demon-slayer-2560x1080-23247.jpg"
-       alt="Demon Slayer"
-       loading="lazy">
-  <span class="episode-title">الحلقة 29</span>
-</article>
+      <img src="https://i.ibb.co/nsB6vqVM/demon-slayer-2560x1080-23247.jpg"
+           alt="Demon Slayer"
+           loading="lazy">
+    </article>
 
+    <article class="episode-card">
+      <img src="https://i.ibb.co/Zpy6h2tQ/demon-slayer-2880x1800-23615.jpg"
+           alt="Demon Slayer"
+           loading="lazy">
+    </article>
 
-<article class="episode-card">
-  <img src="https://i.ibb.co/Zpy6h2tQ/demon-slayer-2880x1800-23615.jpg"
-       alt="Demon Slayer"
-       loading="lazy">
-  <span class="episode-title">الحلقة 30</span>
-</article>
-
-
-<article class="episode-card">
-  <img src="https://i.ibb.co/YF5Z72Fq/dragon-ball-dragon-ball-super-ultra-instinct-son-goku-wallpaper-preview.jpg"
-       alt="Dragon Ball Super Ultra Instinct Goku"
-       loading="lazy">
-  <span class="episode-title">الحلقة 31</span>
-</article>
-
+    <article class="episode-card">
+      <img src="https://i.ibb.co/YF5Z72Fq/dragon-ball-dragon-ball-super-ultra-instinct-son-goku-wallpaper-preview.jpg"
+           alt="Dragon Ball Super Ultra Instinct Goku"
+           loading="lazy">
+    </article>
 
   </div>
 </section>
+
 
 
 <!-- ================================== -->
