--- a/index.html
+++ b/index.html
@@ -189,40 +189,71 @@
       <img src="https://i.ibb.co/pjRkwDzn/anime-uchiha-sasuke-uzumaki-naruto-road-to-ninja-naruto-the-movie-wallpaper-preview.jpg"
            alt="Naruto Road to Ninja"
            loading="lazy">
+
+      <div class="episode-info">
+        <h4>Naruto Road to Ninja</h4>
+        <span>الحلقة 12</span>
+      </div>
     </article>
 
     <article class="episode-card">
       <img src="https://i.ibb.co/3YsrgWXY/b59198c92059644bbadb214f275a116d.jpg"
            alt="حلقة أنمي"
            loading="lazy">
+
+      <div class="episode-info">
+        <h4>أنمي مغامرات</h4>
+        <span>الحلقة 8</span>
+      </div>
     </article>
 
     <article class="episode-card">
       <img src="https://i.ibb.co/C5XHBV5v/dcgrcre-f4b144f8-2427-4543-b277-5f7f1d5b6381.jpg"
            alt="حلقة أنمي"
            loading="lazy">
+
+      <div class="episode-info">
+        <h4>أنمي أكشن</h4>
+        <span>الحلقة 21</span>
+      </div>
     </article>
 
     <article class="episode-card">
       <img src="https://i.ibb.co/nsB6vqVM/demon-slayer-2560x1080-23247.jpg"
            alt="Demon Slayer"
            loading="lazy">
+
+      <div class="episode-info">
+        <h4>Demon Slayer</h4>
+        <span>الحلقة 5</span>
+      </div>
     </article>
 
     <article class="episode-card">
       <img src="https://i.ibb.co/Zpy6h2tQ/demon-slayer-2880x1800-23615.jpg"
            alt="Demon Slayer"
            loading="lazy">
+
+      <div class="episode-info">
+        <h4>Demon Slayer</h4>
+        <span>الحلقة 6</span>
+      </div>
     </article>
 
     <article class="episode-card">
       <img src="https://i.ibb.co/YF5Z72Fq/dragon-ball-dragon-ball-super-ultra-instinct-son-goku-wallpaper-preview.jpg"
-           alt="Dragon Ball Super Ultra Instinct Goku"
+           alt="Dragon Ball Super"
            loading="lazy">
+
+      <div class="episode-info">
+        <h4>Dragon Ball Super</h4>
+        <span>الحلقة 131</span>
+      </div>
     </article>
 
   </div>
 </section>
+
 
 
 
