--- a/index.html
+++ b/index.html
@@ -187,72 +187,73 @@
 
     <article class="episode-card">
       <img src="https://i.ibb.co/pjRkwDzn/anime-uchiha-sasuke-uzumaki-naruto-road-to-ninja-naruto-the-movie-wallpaper-preview.jpg"
-           alt="Naruto Road to Ninja"
+           alt="ناروتو: الطريق إلى النينجا"
            loading="lazy">
 
       <div class="episode-info">
-        <h4>Naruto Road to Ninja</h4>
+        <h4>ناروتو: الطريق إلى النينجا</h4>
         <span>الحلقة 12</span>
       </div>
     </article>
 
     <article class="episode-card">
       <img src="https://i.ibb.co/3YsrgWXY/b59198c92059644bbadb214f275a116d.jpg"
-           alt="حلقة أنمي"
+           alt="مغامرات الأبطال"
            loading="lazy">
 
       <div class="episode-info">
-        <h4>أنمي مغامرات</h4>
+        <h4>مغامرات الأبطال</h4>
         <span>الحلقة 8</span>
       </div>
     </article>
 
     <article class="episode-card">
       <img src="https://i.ibb.co/C5XHBV5v/dcgrcre-f4b144f8-2427-4543-b277-5f7f1d5b6381.jpg"
-           alt="حلقة أنمي"
+           alt="معركة المصير"
            loading="lazy">
 
       <div class="episode-info">
-        <h4>أنمي أكشن</h4>
+        <h4>معركة المصير</h4>
         <span>الحلقة 21</span>
       </div>
     </article>
 
     <article class="episode-card">
       <img src="https://i.ibb.co/nsB6vqVM/demon-slayer-2560x1080-23247.jpg"
-           alt="Demon Slayer"
+           alt="قاتل الشياطين"
            loading="lazy">
 
       <div class="episode-info">
-        <h4>Demon Slayer</h4>
+        <h4>قاتل الشياطين</h4>
         <span>الحلقة 5</span>
       </div>
     </article>
 
     <article class="episode-card">
       <img src="https://i.ibb.co/Zpy6h2tQ/demon-slayer-2880x1800-23615.jpg"
-           alt="Demon Slayer"
+           alt="قاتل الشياطين"
            loading="lazy">
 
       <div class="episode-info">
-        <h4>Demon Slayer</h4>
+        <h4>قاتل الشياطين</h4>
         <span>الحلقة 6</span>
       </div>
     </article>
 
     <article class="episode-card">
       <img src="https://i.ibb.co/YF5Z72Fq/dragon-ball-dragon-ball-super-ultra-instinct-son-goku-wallpaper-preview.jpg"
-           alt="Dragon Ball Super"
+           alt="دراغون بول سوبر"
            loading="lazy">
 
       <div class="episode-info">
-        <h4>Dragon Ball Super</h4>
+        <h4>دراغون بول سوبر</h4>
         <span>الحلقة 131</span>
       </div>
     </article>
 
   </div>
 </section>
+
 
 
 
