--- a/index.html
+++ b/index.html
@@ -246,16 +246,14 @@
            loading="lazy">
 
       <div class="episode-info">
-        <h4>دراغون بول سوبر</h4>
-        <span>الحلقة 131</span>
-      </div>
+  <h4>دراغون بول سوبر</h4>
+  <span class="episode-number">الحلقة 131</span>
+  <small class="episode-title">غوكو يصل إلى الغريزة الفائقة</small>
+</div>
     </article>
 
   </div>
 </section>
-
-
-
 
 
 <!-- ================================== -->
