--- a/index.html
+++ b/index.html
@@ -172,37 +172,97 @@
 <!--  قسم الحلقات الجديدة              -->
 <!-- ================================== -->
 
-<section class="latest-episodes">
+<!-- القسم الرئيسي للحلقات الجديدة -->
+<section class="latest-episodes" aria-label="الحلقات الجديدة">
 
+  <!-- عنوان القسم وأزرار التنقل -->
   <div class="section-header">
     <h3>الحلقات الجديدة</h3>
+    <div class="slider-buttons" aria-label="أزرار التنقل بين الحلقات">
+      <button class="prev" aria-controls="episodesSlider" aria-label="الحلقة السابقة" type="button">‹</button>
+      <button class="next" aria-controls="episodesSlider" aria-label="الحلقة التالية" type="button">›</button>
+    </div>
   </div>
 
-  <div class="episodes-container">
+  <!-- حاوية السلايدر واسمها يعبر عن محتواها -->
+  <div class="episodes-container" id="episodesSlider" tabindex="0">
 
-    <article class="episode-slide">
-      <img src="https://i.ibb.co/pjRkwDzn/anime-uchiha-sasuke-uzumaki-naruto-road-to-ninja-naruto-the-movie-wallpaper-preview.jpg"
-           alt="ناروتو: الطريق إلى النينجا"
-           loading="lazy">
+    <!-- بطاقة حلقة قابلة للتكرار -->
+    <article class="episode-card" tabindex="0">
+      <img
+        src="https://i.ibb.co/pjRkwDzn/anime-uchiha-sasuke-uzumaki-naruto-road-to-ninja-naruto-the-movie-wallpaper-preview.jpg"
+        alt="بوستر ناروتو: الطريق إلى النينجا"
+        loading="lazy"
+      />
       <div class="episode-info">
-        <h4>ناروتو: الطريق إلى النينجا</h4>
-        <span>الحلقة 12</span>
+        <h4 class="work-title">ناروتو: الطريق إلى النينجا</h4>
+        <span class="episode-number">الحلقة 12</span>
       </div>
     </article>
 
-    <article class="episode-slide">
-      <img src="https://i.ibb.co/nsB6vqVM/demon-slayer-2560x1080-23247.jpg"
-           alt="قاتل الشياطين"
-           loading="lazy">
+    <article class="episode-card" tabindex="0">
+      <img
+        src="https://i.ibb.co/3YsrgWXY/b59198c92059644bbadb214f275a116d.jpg"
+        alt="بوستر مغامرات الأبطال"
+        loading="lazy"
+      />
       <div class="episode-info">
-        <h4>قاتل الشياطين</h4>
-        <span>الحلقة 5</span>
+        <h4 class="work-title">مغامرات الأبطال</h4>
+        <span class="episode-number">الحلقة 8</span>
+      </div>
+    </article>
+
+    <article class="episode-card" tabindex="0">
+      <img
+        src="https://i.ibb.co/C5XHBV5v/dcgrcre-f4b144f8-2427-4543-b277-5f7f1d5b6381.jpg"
+        alt="بوستر معركة المصير"
+        loading="lazy"
+      />
+      <div class="episode-info">
+        <h4 class="work-title">معركة المصير</h4>
+        <span class="episode-number">الحلقة 21</span>
+      </div>
+    </article>
+
+    <article class="episode-card" tabindex="0">
+      <img
+        src="https://i.ibb.co/nsB6vqVM/demon-slayer-2560x1080-23247.jpg"
+        alt="بوستر قاتل الشياطين"
+        loading="lazy"
+      />
+      <div class="episode-info">
+        <h4 class="work-title">قاتل الشياطين</h4>
+        <span class="episode-number">الحلقة 5</span>
+      </div>
+    </article>
+
+    <article class="episode-card" tabindex="0">
+      <img
+        src="https://i.ibb.co/Zpy6h2tQ/demon-slayer-2880x1800-23615.jpg"
+        alt="بوستر قاتل الشياطين"
+        loading="lazy"
+      />
+      <div class="episode-info">
+        <h4 class="work-title">قاتل الشياطين</h4>
+        <span class="episode-number">الحلقة 6</span>
+      </div>
+    </article>
+
+    <article class="episode-card" tabindex="0">
+      <img
+        src="https://i.ibb.co/YF5Z72Fq/dragon-ball-dragon-ball-super-ultra-instinct-son-goku-wallpaper-preview.jpg"
+        alt="بوستر دراغون بول سوبر"
+        loading="lazy"
+      />
+      <div class="episode-info">
+        <h4 class="work-title">دراغون بول سوبر</h4>
+        <span class="episode-number">الحلقة 131</span>
       </div>
     </article>
 
   </div>
+
 </section>
-
 
 <!-- ================================== -->
 <!--  ملف JavaScript الرئيسي             -->
