--- a/index.html
+++ b/index.html
@@ -264,6 +264,55 @@
 
 </section>
 
+
+
+<section class="most-watched">
+
+  <div class="section-header">
+    <h2>الأكثر مشاهدة</h2>
+  </div>
+
+  <div class="slider-wrapper">
+
+    <div class="slider" id="mostWatchedSlider">
+
+      <!-- بطاقة -->
+      <article class="slide">
+        <a href="#">
+          <img src="assets/img/conan-1.webp" alt="المحقق كونان الجزء الأول" loading="lazy">
+          <span class="badge">HD</span>
+        </a>
+      </article>
+
+      <article class="slide">
+        <a href="#">
+          <img src="assets/img/conan-2.webp" alt="المحقق كونان الجزء الثاني" loading="lazy">
+          <span class="badge">HD</span>
+        </a>
+      </article>
+
+      <article class="slide">
+        <a href="#">
+          <img src="assets/img/conan-4.webp" alt="المحقق كونان الجزء الرابع" loading="lazy">
+          <span class="badge">HD</span>
+        </a>
+      </article>
+
+      <article class="slide">
+        <a href="#">
+          <img src="assets/img/conan-7.webp" alt="المحقق كونان الجزء السابع" loading="lazy">
+          <span class="badge">HD</span>
+        </a>
+      </article>
+
+    </div>
+
+  </div>
+
+  <div class="dots" id="mostWatchedDots"></div>
+
+</section>
+
 <!-- ================================== -->
 <!--  ملف JavaScript الرئيسي             -->
 <!-- ================================== -->
