--- a/index.html
+++ b/index.html
@@ -278,11 +278,15 @@
 
       <!-- بطاقة -->
       <article class="slide">
-        <a href="#">
-          <img src="assets/img/conan-1.webp" alt="المحقق كونان الجزء الأول" loading="lazy">
-          <span class="badge">HD</span>
-        </a>
-      </article>
+  <a href="#">
+    <img 
+      src="https://i.ibb.co/3m5Cs5QK/1ll-RZXpjw-Vwn3-Lgma6q-N8hm-ZUbl.webp"
+      alt="المحقق كونان الجزء الأول"
+      loading="lazy"
+    >
+    <span class="badge">HD</span>
+  </a>
+</article>
 
       <article class="slide">
         <a href="#">
