--- a/index.html
+++ b/index.html
@@ -289,25 +289,37 @@
 </article>
 
       <article class="slide">
-        <a href="#">
-          <img src="assets/img/conan-2.webp" alt="المحقق كونان الجزء الثاني" loading="lazy">
-          <span class="badge">HD</span>
-        </a>
-      </article>
+  <a href="#">
+    <img
+      src="https://i.ibb.co/Z1p6HWpD/su-WDMXbqd-Y767-ZYf-Kmaoih7-Lpoe.webp"
+      alt="المحقق كونان الجزء الثاني"
+      loading="lazy"
+    >
+    <span class="badge">HD</span>
+  </a>
+</article>
 
       <article class="slide">
-        <a href="#">
-          <img src="assets/img/conan-4.webp" alt="المحقق كونان الجزء الرابع" loading="lazy">
-          <span class="badge">HD</span>
-        </a>
-      </article>
+  <a href="#">
+    <img
+      src="https://i.ibb.co/TqxzvMVT/e0-B6i48kxd-Rk-Mc-K4t-R4-YNf-XGWOc.webp"
+      alt="المحقق كونان الجزء الرابع"
+      loading="lazy"
+    >
+    <span class="badge">HD</span>
+  </a>
+</article>
 
       <article class="slide">
-        <a href="#">
-          <img src="assets/img/conan-7.webp" alt="المحقق كونان الجزء السابع" loading="lazy">
-          <span class="badge">HD</span>
-        </a>
-      </article>
+  <a href="#">
+    <img
+      src="https://i.ibb.co/V4mvvH6/4j-U2-Bdk1-MB2-Ov-P4-BBv-TJIPQc0-BF.webp"
+      alt="المحقق كونان الجزء السابع"
+      loading="lazy"
+    >
+    <span class="badge">HD</span>
+  </a>
+</article>
 
     </div>
 
