--- a/index.html
+++ b/index.html
@@ -172,7 +172,6 @@
 <!--  قسم الحلقات الجديدة              -->
 <!-- ================================== -->
 
-<!-- القسم الرئيسي للحلقات الجديدة -->
 <section class="latest-episodes" aria-label="الحلقات الجديدة">
 
   <!-- عنوان القسم وأزرار التنقل -->
@@ -265,6 +264,9 @@
 </section>
 
 
+<!-- ================================== -->
+<!--  قسم الأعمال الأكثر مشاهدة        -->
+<!-- ================================== -->
 
 <section class="most-watched">
 
@@ -326,6 +328,72 @@
   </div>
 
   <div class="dots" id="mostWatchedDots"></div>
+
+</section>
+
+<!-- ================================== -->
+<!--  قسم جميع الأعمال (عرض مختصر)     -->
+<!--  يعرض مجموعة محدودة من الأعمال    -->
+<!--  مع رابط لصفحة جميع الأعمال       -->
+<!-- ================================== -->
+
+<section class="all-works-preview" aria-label="جميع الأعمال">
+
+  <!-- عنوان القسم -->
+  <div class="section-header">
+    <h2>جميع الأعمال</h2>
+  </div>
+
+  <!-- شبكة عرض الأعمال -->
+  <div class="works-grid">
+
+    <!-- بطاقة عمل -->
+    <article class="work-card">
+      <a href="/work/conan">
+        <img
+          src="assets/img/conan.webp"
+          alt="المحقق كونان"
+          loading="lazy"
+        >
+      </a>
+    </article>
+
+    <article class="work-card">
+      <a href="/work/bluey">
+        <img
+          src="assets/img/bluey.webp"
+          alt="Bluey"
+          loading="lazy"
+        >
+      </a>
+    </article>
+
+    <article class="work-card">
+      <a href="/work/alvin">
+        <img
+          src="assets/img/alvin.webp"
+          alt="Alvin and the Chipmunks"
+          loading="lazy"
+        >
+      </a>
+    </article>
+
+    <article class="work-card">
+      <a href="/work/casper">
+        <img
+          src="assets/img/casper.webp"
+          alt="Casper"
+          loading="lazy"
+        >
+      </a>
+    </article>
+
+  </div>
+
+  <!-- زر الانتقال إلى صفحة جميع الأعمال -->
+  <a href="/works" class="view-all-btn">
+    عرض جميع الأعمال
+  </a>
 
 </section>
 
