--- a/index.html
+++ b/index.html
@@ -348,45 +348,70 @@
   <div class="works-grid">
 
     <!-- بطاقة عمل -->
-    <article class="work-card">
-      <a href="/work/conan">
-        <img
-          src="assets/img/conan.webp"
-          alt="المحقق كونان"
-          loading="lazy"
-        >
-      </a>
-    </article>
+    <!-- بطاقة عمل: المحقق كونان -->
+<article class="work-card">
+  <a href="/work/conan">
+    <img
+      src="https://i.ibb.co/GQfWzYn9/88hd-Ye-Gnh0-G89-Kosw9u-NZR4zk-Cv.webp"
+      alt="المحقق كونان"
+      loading="lazy"
+    >
+  </a>
+</article>
 
     <article class="work-card">
-      <a href="/work/bluey">
-        <img
-          src="assets/img/bluey.webp"
-          alt="Bluey"
-          loading="lazy"
-        >
-      </a>
-    </article>
+  <a href="/work/bluey">
+    <img
+      src="https://i.ibb.co/XrJd6dV9/ao-Qvb4i-POa-Pjq7-ZQ2-Ra-ZIBOxam-O.webp"
+      alt="Bluey"
+      loading="lazy"
+    >
+  </a>
+</article>
+
 
     <article class="work-card">
-      <a href="/work/alvin">
-        <img
-          src="assets/img/alvin.webp"
-          alt="Alvin and the Chipmunks"
-          loading="lazy"
-        >
-      </a>
-    </article>
+  <a href="/work/bluey">
+    <img
+      src="https://i.ibb.co/dwBTj7BS/a-UFQn5-TFQKSMWp46-G5-R1ju2-GWIb.webp"
+      alt="Bluey cartoon poster"
+      loading="lazy"
+    >
+  </a>
+</article>
 
     <article class="work-card">
-      <a href="/work/casper">
-        <img
-          src="assets/img/casper.webp"
-          alt="Casper"
-          loading="lazy"
-        >
-      </a>
-    </article>
+  <a href="/work/bluey">
+    <img
+      src="https://i.ibb.co/nhPm9KQ/b-GOi-P1-EKSf7d1czy-JEwsur-Lz1-NI.webp"
+      alt="Bluey cartoon poster"
+      loading="lazy"
+    >
+  </a>
+</article>
+
+<article class="work-card">
+  <a href="/work/bluey">
+    <img
+      src="https://i.ibb.co/KcTFPLxt/cll-FRa-Jm-Sy-Wl-IYw-JNb-Vsl-Ro-R9d-P.webp"
+      alt="Bluey cartoon poster"
+      loading="lazy"
+    >
+  </a>
+</article>
+
+<article class="work-card">
+  <a href="/work/bluey">
+    <img
+      src="https://i.ibb.co/ZRwq56CJ/di2a-Hecm5-JNC1-HUIa4l-Kz9cny-RD.webp"
+      alt="Bluey cartoon poster"
+      loading="lazy"
+      width="320"
+      height="180"
+    >
+  </a>
+</article>
+
 
   </div>
 
