--- a/index.html
+++ b/index.html
@@ -412,6 +412,28 @@
   </a>
 </article>
 
+<article class="work-card">
+  <a href="/work/bluey">
+    <img
+      src="https://i.ibb.co/ZRwq56CJ/di2a-Hecm5-JNC1-HUIa4l-Kz9cny-RD.webp"
+      alt="Bluey cartoon poster"
+      loading="lazy"
+    >
+  </a>
+</article>
+
+<article class="work-card">
+  <a href="/work/bluey">
+    <img
+      src="https://i.ibb.co/8LN8LxmZ/e3i8-K5-W4p2-JLGMa-Px-RWH1-Hr9r-M2.webp"
+      alt="Bluey cartoon poster"
+      loading="lazy"
+    >
+  </a>
+</article>
+
+
+
 
   </div>
 
