--- a/index.html
+++ b/index.html
@@ -432,7 +432,35 @@
   </a>
 </article>
 
+<article class="work-card">
+  <a href="/work/bluey">
+    <img
+      src="https://i.ibb.co/ZRwq56CJ/di2a-Hecm5-JNC1-HUIa4l-Kz9cny-RD.webp"
+      alt="Bluey cartoon poster"
+      loading="lazy"
+    >
+  </a>
+</article>
 
+<article class="work-card">
+  <a href="/work/bluey">
+    <img
+      src="https://i.ibb.co/FqCTS3WH/m-UJGt-ID4-Uy-O6n-LE0-Ztqq48y4-Hdw.webp"
+      alt="Bluey cartoon poster"
+      loading="lazy"
+    >
+  </a>
+</article>
+
+<article class="work-card">
+  <a href="/work/bluey">
+    <img
+      src="https://i.ibb.co/FqCTS3WH/m-UJGt-ID4-Uy-O6n-LE0-Ztqq48y4-Hdw.webp"
+      alt="بوستر مسلسل بلو"
+      loading="lazy"
+    >
+  </a>
+</article>
 
 
   </div>
