--- a/index.html
+++ b/index.html
@@ -462,6 +462,15 @@
   </a>
 </article>
 
+<article class="work-card">
+  <a href="/work/bluey">
+    <img
+      src="https://i.ibb.co/YTq2vJmh/URy-Rw-DZZp3-Ti-Zb-R7-CVVh9e9-SUd.webp"
+      alt="بوستر مسلسل بلو"
+      loading="lazy"
+    >
+  </a>
+</article>
 
   </div>
 
