--- a/index.html
+++ b/index.html
@@ -393,8 +393,8 @@
 <article class="work-card">
   <a href="/work/bluey">
     <img
-      src="https://i.ibb.co/KcTFPLxt/cll-FRa-Jm-Sy-Wl-IYw-JNb-Vsl-Ro-R9d-P.webp"
-      alt="Bluey cartoon poster"
+      src="https://i.ibb.co/YTq2vJmh/URy-Rw-DZZp3-Ti-Zb-R7-CVVh9e9-SUd.webp"
+      alt="بوستر مسلسل بلو"
       loading="lazy"
     >
   </a>
