--- a/index.html
+++ b/index.html
@@ -401,13 +401,11 @@
 </article>
 
 <article class="work-card">
-  <a href="/work/bluey">
+  <a href="/work/conan">
     <img
-      src="https://i.ibb.co/ZRwq56CJ/di2a-Hecm5-JNC1-HUIa4l-Kz9cny-RD.webp"
-      alt="Bluey cartoon poster"
+      src="https://i.ibb.co/GQfWzYn9/88hd-Ye-Gnh0-G89-Kosw9u-NZR4zk-Cv.webp"
+      alt="المحقق كونان"
       loading="lazy"
-      width="320"
-      height="180"
     >
   </a>
 </article>
