--- a/index.html
+++ b/index.html
@@ -188,28 +188,24 @@
 
     <!-- بطاقة حلقة قابلة للتكرار -->
     <article class="episode-card" tabindex="0">
-      <img
-        src="https://i.ibb.co/pjRkwDzn/anime-uchiha-sasuke-uzumaki-naruto-road-to-ninja-naruto-the-movie-wallpaper-preview.jpg"
-        alt="بوستر ناروتو: الطريق إلى النينجا"
-        loading="lazy"
-      />
-      <div class="episode-info">
-        <h4 class="work-title">ناروتو: الطريق إلى النينجا</h4>
-        <span class="episode-number">الحلقة 12</span>
-      </div>
-    </article>
+  <div class="episode-thumb">
+    <img
+      src="https://i.ibb.co/pjRkwDzn/anime-uchiha-sasuke-uzumaki-naruto-road-to-ninja-naruto-the-movie-wallpaper-preview.jpg"
+      alt="بوستر ناروتو: الطريق إلى النينجا"
+      loading="lazy"
+    />
+  </div>
+</article>
+
 
     <article class="episode-card" tabindex="0">
-      <img
-        src="https://i.ibb.co/3YsrgWXY/b59198c92059644bbadb214f275a116d.jpg"
-        alt="بوستر مغامرات الأبطال"
-        loading="lazy"
-      />
-      <div class="episode-info">
-        <h4 class="work-title">مغامرات الأبطال</h4>
-        <span class="episode-number">الحلقة 8</span>
-      </div>
-    </article>
+  <img
+    src="https://i.ibb.co/3YsrgWXY/b59198c92059644bbadb214f275a116d.jpg"
+    alt="بوستر مغامرات الأبطال"
+    loading="lazy"
+  />
+</article>
+
 
     <article class="episode-card" tabindex="0">
       <img
