--- a/index.html
+++ b/index.html
@@ -177,35 +177,31 @@
   <!-- عنوان القسم وأزرار التنقل -->
   <div class="section-header">
     <h3>الحلقات الجديدة</h3>
+
     <div class="slider-buttons" aria-label="أزرار التنقل بين الحلقات">
       <button class="prev" aria-controls="episodesSlider" aria-label="الحلقة السابقة" type="button">‹</button>
       <button class="next" aria-controls="episodesSlider" aria-label="الحلقة التالية" type="button">›</button>
     </div>
   </div>
 
-  <!-- حاوية السلايدر واسمها يعبر عن محتواها -->
+  <!-- السلايدر -->
   <div class="episodes-container" id="episodesSlider" tabindex="0">
 
-    <!-- بطاقة حلقة قابلة للتكرار -->
     <article class="episode-card" tabindex="0">
-  <div class="episode-thumb">
-    <img
-      src="https://i.ibb.co/pjRkwDzn/anime-uchiha-sasuke-uzumaki-naruto-road-to-ninja-naruto-the-movie-wallpaper-preview.jpg"
-      alt="بوستر ناروتو: الطريق إلى النينجا"
-      loading="lazy"
-    />
-  </div>
-</article>
-
+      <img
+        src="https://i.ibb.co/pjRkwDzn/anime-uchiha-sasuke-uzumaki-naruto-road-to-ninja-naruto-the-movie-wallpaper-preview.jpg"
+        alt="بوستر ناروتو: الطريق إلى النينجا"
+        loading="lazy"
+      />
+    </article>
 
     <article class="episode-card" tabindex="0">
-  <img
-    src="https://i.ibb.co/3YsrgWXY/b59198c92059644bbadb214f275a116d.jpg"
-    alt="بوستر مغامرات الأبطال"
-    loading="lazy"
-  />
-</article>
-
+      <img
+        src="https://i.ibb.co/3YsrgWXY/b59198c92059644bbadb214f275a116d.jpg"
+        alt="بوستر مغامرات الأبطال"
+        loading="lazy"
+      />
+    </article>
 
     <article class="episode-card" tabindex="0">
       <img
@@ -213,10 +209,6 @@
         alt="بوستر معركة المصير"
         loading="lazy"
       />
-      <div class="episode-info">
-        <h4 class="work-title">معركة المصير</h4>
-        <span class="episode-number">الحلقة 21</span>
-      </div>
     </article>
 
     <article class="episode-card" tabindex="0">
@@ -225,10 +217,6 @@
         alt="بوستر قاتل الشياطين"
         loading="lazy"
       />
-      <div class="episode-info">
-        <h4 class="work-title">قاتل الشياطين</h4>
-        <span class="episode-number">الحلقة 5</span>
-      </div>
     </article>
 
     <article class="episode-card" tabindex="0">
@@ -237,10 +225,6 @@
         alt="بوستر قاتل الشياطين"
         loading="lazy"
       />
-      <div class="episode-info">
-        <h4 class="work-title">قاتل الشياطين</h4>
-        <span class="episode-number">الحلقة 6</span>
-      </div>
     </article>
 
     <article class="episode-card" tabindex="0">
@@ -249,16 +233,10 @@
         alt="بوستر دراغون بول سوبر"
         loading="lazy"
       />
-      <div class="episode-info">
-        <h4 class="work-title">دراغون بول سوبر</h4>
-        <span class="episode-number">الحلقة 131</span>
-      </div>
     </article>
 
   </div>
-
 </section>
-
 
 <!-- ================================== -->
 <!--  قسم الأعمال الأكثر مشاهدة        -->
