--- a/index.html
+++ b/index.html
@@ -187,53 +187,71 @@
   <!-- السلايدر -->
   <div class="episodes-container" id="episodesSlider" tabindex="0">
 
-    <article class="episode-card" tabindex="0">
-      <img
-        src="https://i.ibb.co/pjRkwDzn/anime-uchiha-sasuke-uzumaki-naruto-road-to-ninja-naruto-the-movie-wallpaper-preview.jpg"
-        alt="بوستر ناروتو: الطريق إلى النينجا"
-        loading="lazy"
-      />
-    </article>
+    <article class="slide">
+  <a href="#">
+    <img 
+      src="https://i.ibb.co/3m5Cs5QK/1ll-RZXpjw-Vwn3-Lgma6q-N8hm-ZUbl.webp"
+      alt="المحقق كونان الجزء الأول"
+      loading="lazy"
+    >
+    <span class="badge">HD</span>
+  </a>
+</article>
 
-    <article class="episode-card" tabindex="0">
-      <img
-        src="https://i.ibb.co/3YsrgWXY/b59198c92059644bbadb214f275a116d.jpg"
-        alt="بوستر مغامرات الأبطال"
-        loading="lazy"
-      />
-    </article>
+    <article class="slide">
+  <a href="#">
+    <img 
+      src="https://i.ibb.co/3m5Cs5QK/1ll-RZXpjw-Vwn3-Lgma6q-N8hm-ZUbl.webp"
+      alt="المحقق كونان الجزء الأول"
+      loading="lazy"
+    >
+    <span class="badge">HD</span>
+  </a>
+</article>
 
-    <article class="episode-card" tabindex="0">
-      <img
-        src="https://i.ibb.co/C5XHBV5v/dcgrcre-f4b144f8-2427-4543-b277-5f7f1d5b6381.jpg"
-        alt="بوستر معركة المصير"
-        loading="lazy"
-      />
-    </article>
+    <article class="slide">
+  <a href="#">
+    <img 
+      src="https://i.ibb.co/3m5Cs5QK/1ll-RZXpjw-Vwn3-Lgma6q-N8hm-ZUbl.webp"
+      alt="المحقق كونان الجزء الأول"
+      loading="lazy"
+    >
+    <span class="badge">HD</span>
+  </a>
+</article>
 
-    <article class="episode-card" tabindex="0">
-      <img
-        src="https://i.ibb.co/nsB6vqVM/demon-slayer-2560x1080-23247.jpg"
-        alt="بوستر قاتل الشياطين"
-        loading="lazy"
-      />
-    </article>
+    <article class="slide">
+  <a href="#">
+    <img 
+      src="https://i.ibb.co/3m5Cs5QK/1ll-RZXpjw-Vwn3-Lgma6q-N8hm-ZUbl.webp"
+      alt="المحقق كونان الجزء الأول"
+      loading="lazy"
+    >
+    <span class="badge">HD</span>
+  </a>
+</article>
 
-    <article class="episode-card" tabindex="0">
-      <img
-        src="https://i.ibb.co/Zpy6h2tQ/demon-slayer-2880x1800-23615.jpg"
-        alt="بوستر قاتل الشياطين"
-        loading="lazy"
-      />
-    </article>
+    <article class="slide">
+  <a href="#">
+    <img 
+      src="https://i.ibb.co/3m5Cs5QK/1ll-RZXpjw-Vwn3-Lgma6q-N8hm-ZUbl.webp"
+      alt="المحقق كونان الجزء الأول"
+      loading="lazy"
+    >
+    <span class="badge">HD</span>
+  </a>
+</article>
 
-    <article class="episode-card" tabindex="0">
-      <img
-        src="https://i.ibb.co/YF5Z72Fq/dragon-ball-dragon-ball-super-ultra-instinct-son-goku-wallpaper-preview.jpg"
-        alt="بوستر دراغون بول سوبر"
-        loading="lazy"
-      />
-    </article>
+    <article class="slide">
+  <a href="#">
+    <img 
+      src="https://i.ibb.co/3m5Cs5QK/1ll-RZXpjw-Vwn3-Lgma6q-N8hm-ZUbl.webp"
+      alt="المحقق كونان الجزء الأول"
+      loading="lazy"
+    >
+    <span class="badge">HD</span>
+  </a>
+</article>
 
   </div>
 </section>
