--- a/index.html
+++ b/index.html
@@ -172,20 +172,15 @@
 <!--  قسم الحلقات الجديدة              -->
 <!-- ================================== -->
 
-<section class="latest-episodes" aria-label="الحلقات الجديدة">
+<section class="most-watched">
 
-  <!-- عنوان القسم وأزرار التنقل -->
   <div class="section-header">
-    <h3>الحلقات الجديدة</h3>
-
-    <div class="slider-buttons" aria-label="أزرار التنقل بين الحلقات">
-      <button class="prev" aria-controls="episodesSlider" aria-label="الحلقة السابقة" type="button">‹</button>
-      <button class="next" aria-controls="episodesSlider" aria-label="الحلقة التالية" type="button">›</button>
-    </div>
+    <h2>الحلقات الجديدة</h2>
   </div>
 
-  <!-- السلايدر -->
-  <div class="episodes-container" id="episodesSlider" tabindex="0">
+  <div class="slider-wrapper">
+
+    <div class="slider" id="mostWatchedSlider">
 
     <article class="slide">
   <a href="#">
