--- a/index.html
+++ b/index.html
@@ -76,41 +76,35 @@
 <!-- ================================== -->
 <section class="hero-container">
 
-    <!-- صورة الخلفية -->
-    <img
-    class="hero-bg"
-    src="https://i.ibb.co/xS6bNQK2/hero.jpg"
-    alt="خلفية أنمي"
-/>
+  <!-- صور السلايدر -->
+  <img class="hero-bg active" src="hero1.webp" alt="Anime Hero 1">
+  <img class="hero-bg" src="hero2.webp" alt="Anime Hero 2">
+  <img class="hero-bg" src="hero3.webp" alt="Anime Hero 3">
 
-    <!-- طبقة تغميق فوق الصورة -->
-    <div class="hero-overlay"></div>
+  <!-- Overlay -->
+  <div class="hero-overlay"></div>
 
-    <!-- محتوى الـ Hero -->
-    <div class="hero-content">
-
-        <!-- أزرار التفاعل -->
-        <div class="hero-buttons">
-
-            <!-- زر المشاهدة -->
-            <a href="#" class="btn-play">
-                <i class="fas fa-play"></i>
-                شاهد الآن
-            </a>
-
-            <!-- زر التفاصيل -->
-            <a href="#" class="btn-info">
-                التفاصيل
-                <i
-                    class="fas fa-chevron-left"
-                    style="margin-right: 8px; font-size: 12px;"
-                ></i>
-            </a>
-
-        </div>
+  <!-- المحتوى -->
+  <div class="hero-content">
+    <div class="hero-buttons">
+      <a href="#" class="btn-play">
+        <i class="fas fa-play"></i> شاهد الآن
+      </a>
+      <a href="#" class="btn-info">
+        التفاصيل <i class="fas fa-chevron-left"></i>
+      </a>
     </div>
+  </div>
+
+  <!-- dots -->
+  <div class="hero-dots">
+    <span class="hero-dot active"></span>
+    <span class="hero-dot"></span>
+    <span class="hero-dot"></span>
+  </div>
 
 </section>
+
 
 <!-- ================================== -->
 <!--  القائمة الجانبية (Sidebar)         -->
