--- a/index.html
+++ b/index.html
@@ -77,9 +77,26 @@
 <section class="hero-container">
 
   <!-- صور السلايدر -->
-  <img class="hero-bg active" src="hero1.webp" alt="Anime Hero 1">
-  <img class="hero-bg" src="hero2.webp" alt="Anime Hero 2">
-  <img class="hero-bg" src="hero3.webp" alt="Anime Hero 3">
+  <img
+    class="hero-bg active"
+    src="https://i.ibb.co/rXrfN5Y/thumb-1920-981462.jpg"
+    alt="Anime Hero Background 1"
+    loading="eager"
+  >
+
+  <img
+    class="hero-bg"
+    src="https://i.ibb.co/rXrfN5Y/thumb-1920-981462.jpg"
+    alt="Anime Hero Background 2"
+    loading="lazy"
+  >
+
+  <img
+    class="hero-bg"
+    src="https://i.ibb.co/rXrfN5Y/thumb-1920-981462.jpg"
+    alt="Anime Hero Background 3"
+    loading="lazy"
+  >
 
   <!-- Overlay -->
   <div class="hero-overlay"></div>
@@ -87,12 +104,17 @@
   <!-- المحتوى -->
   <div class="hero-content">
     <div class="hero-buttons">
+
       <a href="#" class="btn-play">
-        <i class="fas fa-play"></i> شاهد الآن
+        <i class="fas fa-play"></i>
+        شاهد الآن
       </a>
+
       <a href="#" class="btn-info">
-        التفاصيل <i class="fas fa-chevron-left"></i>
+        التفاصيل
+        <i class="fas fa-chevron-left"></i>
       </a>
+
     </div>
   </div>
 
@@ -104,6 +126,7 @@
   </div>
 
 </section>
+
 
 
 <!-- ================================== -->
