--- a/index.html
+++ b/index.html
@@ -196,6 +196,7 @@
 <!-- ================================== -->
 <!--  قسم الحلقات الجديدة              -->
 <!-- ================================== -->
+console.log("Hero Slides:", heroSlides.length);
 
 <section class="most-watched">
 
@@ -205,7 +206,7 @@
 
   <div class="slider-wrapper">
 
-    <div class="slider" id="mostWatchedSlider">
+    <div class="slider" id="newEpisodesSlider">
 
     <article class="slide">
   <a href="#">
