--- a/index.html
+++ b/index.html
@@ -74,7 +74,8 @@
 <!-- ================================== -->
 <!--  قسم الـ Hero (الواجهة الرئيسية)    -->
 <!-- ================================== -->
-  <section class="hero-slider">
+  <!-- index.html -->
+<section class="hero-slider">
 
   <!-- شريحة 1 -->
   <div class="slide active" style="--bg-url:url('https://i.ibb.co/rXrfN5Y/thumb-1920-981462.jpg')">
@@ -106,7 +107,6 @@
     </div>
   </div>
 
-  <!-- أضف عدد الشرائح بحسب الحاجة -->
   <!-- شريحة 3 -->
   <div class="slide" style="--bg-url:url('https://i.ibb.co/rXrfN5Y/thumb-1920-981462.jpg')">
     <div class="slide-content">
@@ -123,7 +123,11 @@
   </div>
 
   <!-- نقاط التصفح -->
-  <div class="dots"></div>
+  <div class="hero-dots">
+    <div class="hero-dot active"></div>
+    <div class="hero-dot"></div>
+    <div class="hero-dot"></div>
+  </div>
 
 </section>
 
