--- a/index.html
+++ b/index.html
@@ -74,8 +74,7 @@
 <!-- ================================== -->
 <!--  قسم الـ Hero (الواجهة الرئيسية)    -->
 <!-- ================================== -->
-  <!-- index.html -->
-<section class="hero-slider">
+  <section class="hero-slider">
 
   <!-- شريحة 1 -->
   <div class="slide active" style="--bg-url:url('https://i.ibb.co/rXrfN5Y/thumb-1920-981462.jpg')">
@@ -107,6 +106,7 @@
     </div>
   </div>
 
+  <!-- أضف عدد الشرائح بحسب الحاجة -->
   <!-- شريحة 3 -->
   <div class="slide" style="--bg-url:url('https://i.ibb.co/rXrfN5Y/thumb-1920-981462.jpg')">
     <div class="slide-content">
@@ -123,11 +123,7 @@
   </div>
 
   <!-- نقاط التصفح -->
-  <div class="hero-dots">
-    <div class="hero-dot active"></div>
-    <div class="hero-dot"></div>
-    <div class="hero-dot"></div>
-  </div>
+  <div class="dots"></div>
 
 </section>
 
