--- a/index.html
+++ b/index.html
@@ -74,59 +74,28 @@
 <!-- ================================== -->
 <!--  قسم الـ Hero (الواجهة الرئيسية)    -->
 <!-- ================================== -->
-  <section class="hero-slider">
 
-  <!-- شريحة 1 -->
-  <div class="slide active" style="--bg-url:url('https://i.ibb.co/rXrfN5Y/thumb-1920-981462.jpg')">
-    <div class="slide-content">
-      <h2 class="title">جيغوكو داكو الموسم الثاني</h2>
-      <div class="buttons">
-        <a href="#" class="btn btn-play">
-          <i class="fas fa-play"></i> شاهد الآن
-        </a>
-        <a href="#" class="btn btn-info">
-          التفاصيل <i class="fas fa-chevron-left"></i>
-        </a>
-      </div>
+<section class="hero">
+
+  <div class="hero-slider">
+
+    <div class="hero-slide active">
+      <img src="assets/img/slide1.webp" alt="Featured Anime 1">
     </div>
+
+    <div class="hero-slide">
+      <img src="assets/img/slide2.webp" alt="Featured Anime 2">
+    </div>
+
+    <div class="hero-slide">
+      <img src="assets/img/slide3.webp" alt="Featured Anime 3">
+    </div>
+
   </div>
 
-  <!-- شريحة 2 -->
-  <div class="slide" style="--bg-url:url('https://i.ibb.co/7qRLRrP/thumb-1920-1319290.jpg')">
-    <div class="slide-content">
-      <h2 class="title">عنوان آخر مثلاً</h2>
-      <div class="buttons">
-        <a href="#" class="btn btn-play">
-          <i class="fas fa-play"></i> شاهد الآن
-        </a>
-        <a href="#" class="btn btn-info">
-          التفاصيل <i class="fas fa-chevron-left"></i>
-        </a>
-      </div>
-    </div>
-  </div>
-
-  <!-- أضف عدد الشرائح بحسب الحاجة -->
-  <!-- شريحة 3 -->
-  <div class="slide" style="--bg-url:url('https://i.ibb.co/rXrfN5Y/thumb-1920-981462.jpg')">
-    <div class="slide-content">
-      <h2 class="title">شريحة ثالثة</h2>
-      <div class="buttons">
-        <a href="#" class="btn btn-play">
-          <i class="fas fa-play"></i> شاهد الآن
-        </a>
-        <a href="#" class="btn btn-info">
-          التفاصيل <i class="fas fa-chevron-left"></i>
-        </a>
-      </div>
-    </div>
-  </div>
-
-  <!-- نقاط التصفح -->
-  <div class="dots"></div>
+  <div class="hero-dots"></div>
 
 </section>
-
 
 <!-- ================================== -->
 <!--  القائمة الجانبية (Sidebar)         -->
