--- a/index.html
+++ b/index.html
@@ -79,16 +79,29 @@
 
   <div class="hero-slider">
 
+    <!-- Slide 1 (LCP) -->
     <div class="hero-slide active">
-      <img src="assets/img/slide1.webp" alt="Featured Anime 1">
+      <img 
+        src="https://i.ibb.co/5W0bk4y3/demon-slayer-2880x1800-23615.jpg"
+        alt="Demon Slayer Anime Poster"
+        loading="eager"
+        fetchpriority="high">
     </div>
 
+    <!-- Slide 2 -->
     <div class="hero-slide">
-      <img src="assets/img/slide2.webp" alt="Featured Anime 2">
+      <img 
+        src="https://i.ibb.co/zhBwvf36/thumb-1920-1081458.jpg"
+        alt="Anime Featured Banner"
+        loading="lazy">
     </div>
 
+    <!-- Slide 3 -->
     <div class="hero-slide">
-      <img src="assets/img/slide3.webp" alt="Featured Anime 3">
+      <img 
+        src="https://i.ibb.co/DD1LmqBp/thumb-1920-1319290.jpg"
+        alt="Anime Featured Banner 2"
+        loading="lazy">
     </div>
 
   </div>
