--- a/index.html
+++ b/index.html
@@ -81,26 +81,66 @@
 
     <!-- Slide 1 (LCP) -->
     <div class="hero-slide active">
-      <img 
-        src="https://i.ibb.co/5W0bk4y3/demon-slayer-2880x1800-23615.jpg"
-        alt="Demon Slayer Anime Poster"
+      <img
+        src="assets/images/images hero/hero_1.webp"
+        alt="Hero Anime Banner 1"
         loading="eager"
         fetchpriority="high">
     </div>
 
     <!-- Slide 2 -->
     <div class="hero-slide">
-      <img 
-        src="https://i.ibb.co/zhBwvf36/thumb-1920-1081458.jpg"
-        alt="Anime Featured Banner"
+      <img
+        src="assets/images/images hero/hero_2.webp"
+        alt="Hero Anime Banner 2"
         loading="lazy">
     </div>
 
     <!-- Slide 3 -->
     <div class="hero-slide">
-      <img 
-        src="https://i.ibb.co/DD1LmqBp/thumb-1920-1319290.jpg"
-        alt="Anime Featured Banner 2"
+      <img
+        src="assets/images/images hero/hero_3.webp"
+        alt="Hero Anime Banner 3"
+        loading="lazy">
+    </div>
+
+    <!-- Slide 4 -->
+    <div class="hero-slide">
+      <img
+        src="assets/images/images hero/hero_4.webp"
+        alt="Hero Anime Banner 4"
+        loading="lazy">
+    </div>
+
+    <!-- Slide 5 -->
+    <div class="hero-slide">
+      <img
+        src="assets/images/images hero/hero_5.webp"
+        alt="Hero Anime Banner 5"
+        loading="lazy">
+    </div>
+
+    <!-- Slide 6 -->
+    <div class="hero-slide">
+      <img
+        src="assets/images/images hero/hero_6.webp"
+        alt="Hero Anime Banner 6"
+        loading="lazy">
+    </div>
+
+    <!-- Slide 7 -->
+    <div class="hero-slide">
+      <img
+        src="assets/images/images hero/hero_7.webp"
+        alt="Hero Anime Banner 7"
+        loading="lazy">
+    </div>
+
+    <!-- Slide 8 -->
+    <div class="hero-slide">
+      <img
+        src="assets/images/images hero/hero_8.webp"
+        alt="Hero Anime Banner 8"
         loading="lazy">
     </div>
 
