--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
 
     <!-- عنوان الصفحة (مهم للـ SEO) -->
     <title>Toonia - عالم الأنمي</title>
+    
+    <base href="/toonia/">
+
 
     <!-- ================================== -->
     <!--  ملفات CSS الخارجية                -->
@@ -82,66 +85,90 @@
     <!-- Slide 1 (LCP) -->
     <div class="hero-slide active">
       <img
-        src="assets/images/images hero/hero_1.webp"
+        src="assets/images/images-hero/hero_1.webp"
         alt="Hero Anime Banner 1"
+        width="1920"
+        height="1080"
         loading="eager"
-        fetchpriority="high">
+        fetchpriority="high"
+        decoding="async">
     </div>
 
     <!-- Slide 2 -->
     <div class="hero-slide">
       <img
-        src="assets/images/images hero/hero_2.webp"
+        src="assets/images/images-hero/hero_2.webp"
         alt="Hero Anime Banner 2"
-        loading="lazy">
+        width="1920"
+        height="1080"
+        loading="lazy"
+        decoding="async">
     </div>
 
     <!-- Slide 3 -->
     <div class="hero-slide">
       <img
-        src="assets/images/images hero/hero_3.webp"
+        src="assets/images/images-hero/hero_3.webp"
         alt="Hero Anime Banner 3"
-        loading="lazy">
+        width="1920"
+        height="1080"
+        loading="lazy"
+        decoding="async">
     </div>
 
     <!-- Slide 4 -->
     <div class="hero-slide">
       <img
-        src="assets/images/images hero/hero_4.webp"
+        src="assets/images/images-hero/hero_4.webp"
         alt="Hero Anime Banner 4"
-        loading="lazy">
+        width="1920"
+        height="1080"
+        loading="lazy"
+        decoding="async">
     </div>
 
     <!-- Slide 5 -->
     <div class="hero-slide">
       <img
-        src="assets/images/images hero/hero_5.webp"
+        src="assets/images/images-hero/hero_5.webp"
         alt="Hero Anime Banner 5"
-        loading="lazy">
+        width="1920"
+        height="1080"
+        loading="lazy"
+        decoding="async">
     </div>
 
     <!-- Slide 6 -->
     <div class="hero-slide">
       <img
-        src="assets/images/images hero/hero_6.webp"
+        src="assets/images/images-hero/hero_6.webp"
         alt="Hero Anime Banner 6"
-        loading="lazy">
+        width="1920"
+        height="1080"
+        loading="lazy"
+        decoding="async">
     </div>
 
     <!-- Slide 7 -->
     <div class="hero-slide">
       <img
-        src="assets/images/images hero/hero_7.webp"
+        src="assets/images/images-hero/hero_7.webp"
         alt="Hero Anime Banner 7"
-        loading="lazy">
+        width="1920"
+        height="1080"
+        loading="lazy"
+        decoding="async">
     </div>
 
     <!-- Slide 8 -->
     <div class="hero-slide">
       <img
-        src="assets/images/images hero/hero_8.webp"
+        src="assets/images/images-hero/hero_8.webp"
         alt="Hero Anime Banner 8"
-        loading="lazy">
+        width="1920"
+        height="1080"
+        loading="lazy"
+        decoding="async">
     </div>
 
   </div>
