--- a/index.html
+++ b/index.html
@@ -40,36 +40,39 @@
     <!-- القسم الأيمن من الهيدر -->
     <div class="header-right">
 
-        <!-- زر القائمة (Hamburger Menu) -->
+        <!-- زر القائمة -->
         <div class="menu-icon">
             <i class="fas fa-bars"></i>
         </div>
 
         <!-- الشعار + اسم الموقع -->
-        <a href="#" class="logo-box">
-    <img
-        src="https://i.ibb.co/7J5Zv38y/toonia-icon.png"
-        alt="Toonia Logo"
-    />
-    <div class="site-name">
-        Too<span>nia</span>
-    </div>
-</a>
+        <a href="" class="logo-box">
+            <img
+                src="assets/images/brand/logo.svg"
+                alt="Toonia Logo"
+                width="40"
+                height="40"
+                loading="eager"
+                decoding="async">
+            <div class="site-name">
+                Too<span>nia</span>
+            </div>
+        </a>
+
     </div>
 
-    <!-- القسم الأيسر من الهيدر -->
+    <!-- القسم الأيسر -->
     <div class="header-left">
 
-        <!-- زر فتح البحث -->
         <div class="search-trigger">
             <i class="fas fa-search"></i>
         </div>
 
-        <!-- زر تسجيل الدخول -->
-        <a href="/login" class="login-button">
+        <a href="login" class="login-button">
             <i class="fas fa-user"></i>
             تسجيل الدخول
         </a>
+
     </div>
 
 </header>
